--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,4 +4,4 @@
       <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
     sample application.
 
-  <a href="http://area51a.net/mds">--mds</a>
+    <%= link_to "Sign up now!", '#', :class => "signup_button round" %>
